<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnGetVip">
        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/etName"
            android:drawableLeft="@drawable/avatar"
            android:drawablePadding="5dp"
            android:paddingLeft="10dp"
            android:paddingBottom="20dp"
            android:backgroundTint="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@android:color/white"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/etDate"
            android:drawableLeft="@drawable/calendar"
            android:drawablePadding="5dp"
            android:paddingLeft="10dp"
            android:paddingBottom="20dp"
            android:backgroundTint="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@android:color/white"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/etPlace"
            android:drawableLeft="@drawable/place"
            android:drawablePadding="5dp"
            android:paddingLeft="10dp"
            android:paddingBottom="20dp"
            android:backgroundTint="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@android:color/white"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/etEmail"
            android:drawableLeft="@drawable/mail"
            android:drawablePadding="5dp"
            android:paddingLeft="10dp"
            android:paddingBottom="20dp"
            android:backgroundTint="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@android:color/white"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorAccent"
            android:text="@string/tvInfo" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cbAccept"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textColor="#8977B1" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGetVip"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/background"
        android:foreground="?selectableItemBackground"
        android:onClick="onClick"
        android:text="@string/app_start_using"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</RelativeLayout>