<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Q1Activity"
    android:background="@drawable/bg3">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_user"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_toRightOf="@+id/imageView"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:text="Александр" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/textView2"
        android:textColor="@color/colorAccent"
        android:text="32 года" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="90dp">
        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="45dp"
            android:textAlignment="center"
            android:text="@string/q1"
            android:textColor="@android:color/white"
            android:textSize="17sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/tvQuestion">

            <CheckBox
                android:id="@+id/CheckBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="10dp"
                android:scaleX="1.1"
                android:scaleY="1.1"
                android:text="@string/answer1_1"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/CheckBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:scaleX="1.1"
                android:scaleY="1.1"
                android:text="@string/answer1_2"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/CheckBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:scaleX="1.1"
                android:scaleY="1.1"
                android:text="@string/answer1_3"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/CheckBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:scaleX="1.1"
                android:scaleY="1.1"
                android:text="@string/answer1_4"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnNext"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/page1"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/toolbar"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/background"
        android:foreground="?selectableItemBackground"
        android:onClick="onClick"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:translationZ="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"
                android:id="@+id/rlProgress"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/taken"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/white" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView5">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/colorAccent"
                        android:text="0"/>

                    <TextView
                        android:id="@+id/tvMoney"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_centerHorizontal="true"
                        android:text="600"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1000"
                        android:layout_centerVertical="true"
                        android:textColor="@color/colorAccent"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressId"
                android:layout_marginTop="30dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:progressDrawable="@drawable/progress_color"
                android:layout_below="@+id/rlProgress"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
</RelativeLayout>